# enterprise-dashboard

./: .zuul.yaml  README.rst  edb-umn-2023-03-04.docx  requirements.txt  setup.cfg  tox.ini  zuul.yaml
.gitea/workflows/: build-html-docs.yaml  build-pdf-docs.yaml
.github/workflows/: build-html-docs.yaml  build-pdf-docs.yaml
api-ref/source/: conf.py  http-status.yaml  index.rst  parameters.yaml  parameters_v2.yaml
api-ref/source/v1/: api_key.inc  consumption.inc  health.inc  index.rst  organizations.inc  versions.inc
api-ref/source/v1/examples/: api_key-create-curl  api_key-create-response.json  api_key-delete-curl  api_key-list-curl  api_key-list-response.json  consumption-day-get-curl  consumption-day-get-response.json  consumption-get-curl  consumption-month-get-curl  consumption-month-get-response.json  consumption-reserved-get-curl  consumption-reserved-get-response.json  consumption-week-get-curl  consumption-week-get-response.json  health-get-curl  orgs-current-get-curl  orgs-current-get-response.json  orgs-list-curl  orgs-list-response.json  orgs-switch-curl  orgs-switch-response.json  versions-get-curl
api-ref/source/v2/: consumption.inc  health.inc  index.rst  versions.inc
doc/: requirements.txt
doc/alerting/source/: api.rst  conf.py  index.rst  userinterface.rst
doc/source/: conf.py  index.rst
doc/sustainability/source/: conf.py  general_documentation.rst  index.rst  usermanual.rst
umn/source/: appendix.rst  conf.py  configuration.rst  database_tables.rst  faq.rst  general.rst  howto.rst  index.rst  introduction.rst
(+11 files in other folders)
